# hmlib

./: .gitignore  README.md  pfg.source.toml  pyproject.toml
.github/workflows/: pytest.yml  test-pypi-publish.yml
src/hmlib/: DateTime.py  DynamicObject.py  __init__.py  datetime.py
src/hmlib/collection/: List.py  __init__.py  list.py
src/hmlib/console/: ColorDecorators.py  __init__.py
src/hmlib/io/: __init__.py  files.py  system_entry.py
src/hmlib/text/: Json.py  __init__.py  json.py
src/hmpy/: __init__.py  hello.py
src/hmpy/collection/: __init__.py
src/hmpy/io/: Files.py  SystemEntry.py  __init__.py
src/hmpy/text/: Json.py  Regex.py  __init__.py
test/: test_dynamic_object.py  test_hello.py  test_io_directory.py  test_io_file.py  test_json.py  test_regex.py  test_text_file.py  test_text_json.py  test_text_regex.py
tests/: test_datetime.py  test_dynamic_object.py  test_io_directory.py  test_io_file.py  test_list.py  test_text_file.py  test_text_json.py  test_text_regex.py
