[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hmlib"       
version = "0.1.2"
description = "这是一个通过 Git 安装的测试包"
authors = [
  { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.12" 

dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
