[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hmlib"
version = "0.1.23"
description = "A Python utils library"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
]
